fix: Make menu always visible for large screens

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -35,3 +35,9 @@
     font-size: 1em;
   }
 }
+
+@media only screen and (min-width: 1025px) {
+  .header__menu-btn {
+    display: none;
+  }
+}
