--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -3,3 +3,10 @@
   background-color: #254558;
   z-index: 100;
 }
+
+@media only screen and (min-width: 1025px) {
+  #map {
+    width: 70%;
+    float: right;
+  }  
+}
